# camera

./: .env.sample  .gitignore  AGENT.md  README.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
apps/cabral/: .coverage  AGENT.md  README.md  project.json  pyproject.toml
apps/camara-nodejs/: .dockerignore  .env.docker  .env.example  .gitignore  .sequelizerc  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/lobby/: AGENT.md  Dockerfile  jest.config.cts  package.json  project.json  pyproject.toml
apps/lobby-e2e/: jest.config.cts  package.json  tsconfig.json
apps/lobby/lobby/: config.py  ingest.py  main.py  schemas.py
apps/lobby/lobby/api/: endpoints.py
apps/lobby/lobby/static/: app.js  index.html
libs/shared-domain/: AGENT.md  alembic.ini  docker-compose.yml  project.json  pyproject.toml  verify_repositories.py
libs/shared-domain/migrations/: env.py
libs/shared-domain/migrations/versions/: b48f6fbaa85b_add_orgao_fields_manual.py  feecfceab78a_baseline_migration.py
libs/shared-domain/shared_domain/: __init__.py
libs/shared-domain/shared_domain/core/: __init__.py  database.py  enums.py
libs/shared-domain/shared_domain/core/models/: __init__.py  base.py  deputado.py  legislatura.py  orgao.py  votacao.py
libs/shared-domain/shared_domain/core/repositories/: __init__.py  base.py  deputado.py  legislatura.py  orgao.py  votacao.py
libs/shared-domain/shared_domain/rag/: __init__.py  models.py  processor.py  repository.py
(+108 files in other folders)
