[project]
name = "lobby"
version = "0.1.0"
description = "FastAPI web server for querying RAG data"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "shared-domain",
]

[tool.uv.sources]
shared-domain = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["lobby"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
