[project]
name = "shared-domain"
version = "0.1.0"
description = "Shared domain models and repository for RAG project"
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "chromadb==0.5.20",
    "ollama>=0.1.0",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["shared_domain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
